<resources>
    <string name="app_name">Mood for Food: KrishnFoodApp</string>
    <string name="food_app">Mood for Food</string>
    <string name="enter_mobile_number_10_digits">Enter Mobile Number (10 Digits)</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign Up Now!</string>
    <string name="name_min_3_characters">Name (Min. 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number_10_digits">Mobile Number (10 Digits)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="preference_file_name">SharedPrefFile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="user_s_name">User\'s Name</string>
    <string name="_91_1115555555">+91-1115555555</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="xxx_person">XXX/person</string>
    <string name="_5_0">5.0</string>
    <string name="cost_low_to_high">Cost (Low to High)</string>
    <string name="cost_high_to_low">Cost (High to Low)</string>
    <string name="name_alphabetically">Name (Alphabetically)</string>
    <string name="filter">Filter</string>
    <string name="john_doe_com">john@doe.com</string>
    <string name="user_s_address">User\'s Address</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="_1">1</string>
    <string name="menu_item_name">Menu Item Name</string>
    <string name="choose_from_menu_listed_below">Choose from Menu listed below:</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="ordering_from">Ordering From: </string>
    <string name="place_order">Place Order</string>
    <string name="rs_xxx">Rs. XXX</string>
    <string name="food_item_name">Food Item Name</string>
    <string name="order_placed">Order Placed!</string>
    <string name="ok">OK</string>
    <string name="your_order_has_been_successfully_placed">Your Order has been successfully placed!</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="enter_the_received_otp_below_along_with_your_new_credentials_to_get_going_again">Enter the received OTP below along with your new credentials to get going again!</string>
    <string name="otp_4_characters">OTP (4 characters)</string>
    <string name="new_password_min_4_characters">New Password (Min. 4 characters)</string>
    <string name="rating">Rating</string>
    <string name="you_have_no_favorite_restaurants_as_of_now">You have no favorite restaurants as of now!</string>
    <string name="faq1">Our Food App does not make any representation or warranty as to the item-specifics (such as legal title, creditworthiness, identity, etc.) of any of the Merchants. You are advised to independently verify the bona fides of any particular Merchant that you choose to deal with on the Platform and use your best judgment in that behalf. All Merchant offers and third party offers are subject to respective party terms and conditions. Our Food App takes no responsibility for such offers.</string>
    <string name="faq2">Our Food App neither make any representation or warranty as to specifics (such as quality, value, saleability, etc.) of the products or services proposed to be sold or offered to be sold or purchased on the Platform nor does implicitly or explicitly support or endorse the sale or purchase of any products or services on the Platform. Our Food App accepts no liability for any errors or omissions, whether on behalf of itself or third parties.</string>
    <string name="faq3">Our Food App is not responsible for any non-performance or breach of any contract entered into between Buyers and Merchants on the Platform. Swiggy cannot and does not guarantee that the concerned Buyers and/or Merchants will perform any transaction concluded on the Platform. Our Food App is not responsible for unsatisfactory or non-performance of services or damages or delays as a result of products which are out of stock, unavailable or back ordered.</string>
    <string name="faq4">Our Food App is operating an online marketplace and assumes the role of facilitator, and does not at any point of time during any transaction between Buyer and Merchant on the Platform come into or take possession of any of the products or services offered by Merchant. At no time shall our Food App hold any right, title or interest over the products nor shall our Food App have any obligations or liabilities in respect of such contract entered into between Buyer and Merchant.</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="your_favorite_restaurants_are_listed_below">Your Favorite Restaurants are listed below:</string>

</resources>