<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_favorites"
            android:title="@string/favorite_restaurants" />

        <item
            android:id="@+id/order_history"
            android:icon="@drawable/ic_order_history"
            android:title="@string/order_history" />

        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faqs" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>
</menu>