<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtOTPSent"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/enter_the_received_otp_below_along_with_your_new_credentials_to_get_going_again"
        android:textAlignment="center"
        android:textColor="@color/text_selector"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etOTP"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_below="@+id/txtOTPSent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:autofillHints="Enter OTP"
        android:background="@drawable/round_rect_shape"
        android:hint="@string/otp_4_characters"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_below="@id/etOTP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/enter_password"
        android:background="@drawable/round_rect_shape"
        android:hint="@string/new_password_min_4_characters"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etConfirmNewPassword"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_below="@id/etNewPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/confirm_password"
        android:background="@drawable/round_rect_shape"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_below="@id/etConfirmNewPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@color/red"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/foodAppLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSubmit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/food_app"
        android:src="@drawable/logo_food_app" />

</RelativeLayout>