<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="60dp">

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_rect_shape"
            android:fontFamily="@font/sintony"
            android:padding="2dp"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sintony"
            android:padding="20dp"
            android:text="@string/faq1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/red" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_rect_shape"
            android:fontFamily="@font/sintony"
            android:padding="2dp"
            android:text="@string/_2"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sintony"
            android:padding="20dp"
            android:text="@string/faq2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/red" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_rect_shape"
            android:fontFamily="@font/sintony"
            android:padding="2dp"
            android:text="@string/_3"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sintony"
            android:padding="20dp"
            android:text="@string/faq3"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/red" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_rect_shape"
            android:fontFamily="@font/sintony"
            android:padding="2dp"
            android:text="@string/_4"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sintony"
            android:padding="20dp"
            android:text="@string/faq4"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/red" />

    </LinearLayout>

</ScrollView>