<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llRestaurantMenus"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="@color/white"
    android:orientation="horizontal"
    android:weightSum="10">

    <TextView
        android:id="@+id/txtMenuItemNumber"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:background="@drawable/round_rect_shape"
        android:fontFamily="@font/sintony"
        android:padding="2dp"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rlRestaurantMenuInfo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6">

        <TextView
            android:id="@+id/txtRestaurantMenuItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/patua_one"
            android:padding="5dp"
            android:text="@string/menu_item_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtRestaurantMenuItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRestaurantMenuItemName"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/icon_rupees"
            android:drawablePadding="5dp"
            android:fontFamily="@font/sintony"
            android:padding="3dp"
            android:text="@string/xxx_person"
            android:textSize="14sp" />

    </RelativeLayout>

    <ToggleButton
        android:id="@+id/btnAddItem"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:layout_weight="2.5"
        android:background="@color/menu_button_selector"
        android:checked="false"
        android:fontFamily="@font/sintony"
        android:text="@string/add"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textOff="@string/add"
        android:textOn="@string/remove"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>