<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/foodAppLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/food_app"
        android:src="@drawable/logo_food_app" />

    <TextView
        android:id="@+id/txtMobAndEmail"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/foodAppLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textColor="@color/text_selector"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etMobileForgot"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_below="@+id/txtMobAndEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/mobile_number_10_digits"
        android:background="@drawable/round_rect_shape"
        android:drawableStart="@drawable/ic_smartphone"
        android:drawablePadding="5dp"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="number"
        android:maxLength="10"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etEmailForgot"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_below="@id/etMobileForgot"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/email_address"
        android:background="@drawable/round_rect_shape"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_below="@id/etEmailForgot"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@color/red"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>