<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llDrawerHeader"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="20dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/cat_profile_pic_default" />

    <TextView
        android:id="@+id/txtNameHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/patua_one"
        android:text="@string/user_s_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMobileHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sintony"
        android:text="@string/_91_1115555555"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>